# PyQt5Udemy

./: README.MD  check_boxes.py  combobox.py  line_edit.py  list-item.py  pyproject.toml  radio_buttons.py  timer.py  window.py
secao1/: buttons.py  images.py  labels.py  message_boxes.py  spinbox.py  text_editor.py
secao2/: rps-game.py
secao3/: formLayout.py  grid_layout.py  horizontalBoxLayout.py  menuWidget.py  open_file_dialog.py  progress_bar.py  sliderWidget.py  tab_widget.py  table_widget.py  verticalAmdHorizontalBoxLayout.py  verticalBoxLayout.py
secao4/: employees.db  main.py
