[tool.poetry]
name = "pyqt5udemy"
version = "0.1.0"
description = ""
authors = ["Henrique Andrade <henrique.ccda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
